Change the copyright.

--- a/Solution/GcdCalculator/Views/Shared/_Layout.cshtml
+++ b/Solution/GcdCalculator/Views/Shared/_Layout.cshtml
@@ -28,7 +28,7 @@
 
     <footer class="border-top footer text-muted">
         <div class="container"><font color="white">
-            &copy; 2023 - GCD Calculator
+            &copy; 2023 - <a style="color:white; text-decoration: none;" href="https://github.com/Lufflee-Vaflee/CalculatorGCD">TEAM: Sokolov D. Ostrovski A. Leikina A.</a>
         </font></div>
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
